--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,12 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : My Blog =)
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
+  name : Kim
+  email : kimyunlai@gmail.com
+  github : kimyunlai
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
@@ -99,7 +98,7 @@ JB :
   analytics :
     provider : google 
     google : 
-        tracking_id : 'UA-123-12'
+        tracking_id : 'UA-32520343-1'
     getclicky :
       site_id : 
     mixpanel :
