--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : My Blog =)
+title : Kim
 tagline: Site Tagline
 author :
   name : Kim
@@ -25,7 +25,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.com
+production_url : http://kimyunlai.github.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
